--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Herança sustentável: Semeando o Futuro</title>
-  <style>
-    /* Add CSS styles here */
-  </style>
+  
 </head>
 <body>
   <header>
