--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </ul>
     </section>
     <section>
-      <h2>Exemplos de herança sustentável</h2>
+      <h2>Exemplo de herança sustentável</h2>
       <img src="example.jpg" alt="Exemplo de herança sustentável">
       <p>Aqui você pode ver um exemplo de herança sustentável em ação.</p>
     </section>
