--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
     <section>
       <h2>Exemplo de herança sustentável</h2>
-      <img src="example.jpg" alt="Exemplo de herança sustentável">
+      <img src="https://images.app.goo.gl/CPDq548TH1ZKi4JM9" alt="Exemplo de herança sustentável">
       <p>Aqui você pode ver um exemplo de herança sustentável em ação.</p>
     </section>
   </main>
