--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section>
       <h2>Exemplo de herança sustentável</h2>
       <img src="susten.jpg" alt="Exemplo de herança sustentável">
-      <p>Aqui você pode ver um exemplo de herança sustentável em ação.</p>
+      <p>"Espera-se fortalecer a prática de transmitir de uma geração a outra, de forma responsável e equilibrada."</p>
     </section>
   </main>
   <footer>
